[gd_scene load_steps=2 format=3 uid="uid://c4wait0001"]

[ext_resource type="Script" path="res://scripts/lobby/waiting_room.gd" id="1_wait"]

[node name="WaitingRoom" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wait")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="RoomNameLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "ルーム名"
horizontal_alignment = 1

[node name="RoomIdLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "ID: xxxxxxxx"
horizontal_alignment = 1

[node name="Sep1" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "設定情報"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Sep2" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="PlayersTitle" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "参加者"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 300)

[node name="PlayerListContainer" type="VBoxContainer" parent="Margin/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="WaitLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "対戦相手を待っています..."
horizontal_alignment = 1

[node name="AIButtons" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
alignment = 1

[node name="AddAIButton" type="Button" parent="Margin/VBox/AIButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 55)
text = "AI追加"

[node name="RemoveAIButton" type="Button" parent="Margin/VBox/AIButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 55)
text = "AI削除"

[node name="Spacer" type="Control" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 70)
text = "ゲーム開始"

[node name="LeaveButton" type="Button" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
text = "退出"
